# grantflow-ai

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CODE_REVIEW_ANALYSIS_SERVICE.md  EXECUTION_STATUS.md  EXECUTIVE_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FINAL_SUMMARY.txt  GLOBAL_SCRAPERS_STATUS.md  GRANTFLOW_COMPLETO.html  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS_S6.md  ORGANIZATION_SUMMARY.txt  PROXY_IMPLEMENTATION_SUMMARY.md  PROXY_QUICK_REFERENCE.md  QUICKSTART_TEAM.md  README.md  RESUMEN_RESULTADOS_ACUMULADOS.md  RUN_TESTS.sh  SCRAPER_EXECUTION_RESULTS.md  SCRAPER_EXECUTION_RESULTS_FINAL.md  SPRINT_S5_OPTIMIZACION.md  SPRINT_S5_SUMMARY.md  TASK_2_COMPLETION.md  TECHNICAL_REFERENCE.md  VERIFICATION_NACIONAL_GLOBAL.md  apply_migrations.py  audit_and_reset.py  audit_queries.sql  check_db_direct.py  docker-compose.yml  execute_seed.py  run_migrations.py  run_scrapers_local.py  run_seed.py  seed_global_orgs.sql  (+1 more)
backend/: .env.example  Dockerfile  GRANTS_GOV_RETRY_IMPLEMENTATION.md  README_RETRY_IMPLEMENTATION.md  RETRY_FLOW_DIAGRAM.txt  TESTING_QUICK_REFERENCE.md  alembic.ini  main.py  pyproject.toml  seed_contacts.sql  test_retry_manual.py  test_scraper.py
backend/app/: mock_data.py
backend/app/api/: chat.py  rag.py  (+12 more)
backend/config/: endpoint_urls.json
backend/migrations/: env.py
backend/scripts/: test_proxy_mock.py
backend/tests/: conftest.py  test_api.py  test_content_type_detector.py  test_grantsgov_retry.py  test_proxy_support.py  test_scoring.py  test_scrapers.py  test_scrapers_selectors.py
(+183 files in other folders)
